--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -14,7 +14,7 @@
         <nav>
           <div class="nav nav-tabs" id="nav-tab" role="tablist">
             {% for environment in environments %}
-              <a class="nav-item nav-link {% if forloop.counter == 1 %}active{% endif %}"
+              <a class="nav-item nav-link"
                  id="nav-{{ environment }}-tab" data-toggle="tab"
                  href="#nav-{{ environment }}" role="tab" aria-controls="nav-{{ environment }}" aria-selected="true">
                 {{ environment.title }}
@@ -24,7 +24,7 @@
         </nav>
         <div class="tab-content" id="nav-tabContent">
           {% for environment in environments %}
-          <div class="tab-pane fade show {% if forloop.counter == 1 %}active{% endif %}" id="nav-{{ environment }}"
+          <div class="tab-pane fade show" id="nav-{{ environment }}"
                role="tabpanel" aria-labelledby="nav-{{ environment }}-tab">
             {% for service_deploy in service_deploys %}
               {% if environment == service_deploy.environment %}
@@ -45,4 +45,15 @@
       </div>
     </div>
   </div>
+{% endblock %}
+
+{% block js %}
+  <script>
+  jQuery(function() {
+    jQuery(location.hash + '-tab').click()
+    jQuery('.nav-link').click(function () {
+      location.href = jQuery(this).prop('href')
+    })
+  })
+  </script>
 {% endblock %}
