--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -58,6 +58,9 @@
                         {% if service_deploy.duration %}
                           <span class="badge badge-info">{{ service_deploy.duration }}</span>
                         {% endif %}
+                        {% if service_deploy.previous_duration %}
+                          <span class="badge badge">{{ service_deploy.previous_duration }}</span>
+                        {% endif %}
                         {% if service_deploy.is_deployed_today %}
                           <span class="badge badge-success">Today</span>
                         {% endif %}
