add header to dashboard page

--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block head_title %}Version Dashboard{% endblock %}
+{% block title %}Version Dashboard{% endblock %}
 
 {% block content %}
   <div class="container">
